samples/_failures_safe/1761693113_69982f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98de9a1a.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_98de9a1a.c:164:16: error: missing terminating " character
  164 |         printf("Error: Expected value at line %d, column %d
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_98de9a1a.c:164:9: error: expected expression at end of input
  164 |         printf("Error: Expected value at line %d, column %d
      |         ^~~~~~
./samples/SAFE/__tmp_98de9a1a.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_98de9a1a.c:164:9: error: expected declaration or statement at end of input
